{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 152,
  "lineage": "ccce4cf0-0327-28b3-4003-9a7ae87e4146",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:224134489861:loadbalancer/app/nginx-alb/0162d42eafa749d2",
            "arn_suffix": "app/nginx-alb/0162d42eafa749d2",
            "dns_name": "nginx-alb-232509689.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:224134489861:loadbalancer/app/nginx-alb/0162d42eafa749d2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-alb",
            "security_groups": [
              "sg-034103cae3e10b6e1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d4126bfcae8f5246"
              },
              {
                "subnet_id": "subnet-0f85c4f61f427724c"
              }
            ],
            "subnets": [
              "subnet-0d4126bfcae8f5246",
              "subnet-0f85c4f61f427724c"
            ],
            "tags": {
              "Name": "Nginx ALB"
            },
            "tags_all": {
              "Name": "Nginx ALB"
            },
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_security_group.alb-sg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "tooling-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:224134489861:loadbalancer/app/tooling-alb/acf48b447675f2d0",
            "arn_suffix": "app/tooling-alb/acf48b447675f2d0",
            "dns_name": "internal-tooling-alb-450558715.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:224134489861:loadbalancer/app/tooling-alb/acf48b447675f2d0",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tooling-alb",
            "security_groups": [
              "sg-034103cae3e10b6e1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d4126bfcae8f5246"
              },
              {
                "subnet_id": "subnet-0f85c4f61f427724c"
              }
            ],
            "subnets": [
              "subnet-0d4126bfcae8f5246",
              "subnet-0f85c4f61f427724c"
            ],
            "tags": {
              "Name": "Tooling ALB"
            },
            "tags_all": {
              "Name": "Tooling ALB"
            },
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_security_group.alb-sg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "wordpress-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:224134489861:loadbalancer/app/wordpress-alb/798660383ff5bca8",
            "arn_suffix": "app/wordpress-alb/798660383ff5bca8",
            "dns_name": "internal-wordpress-alb-364672907.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:224134489861:loadbalancer/app/wordpress-alb/798660383ff5bca8",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordpress-alb",
            "security_groups": [
              "sg-034103cae3e10b6e1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d4126bfcae8f5246"
              },
              {
                "subnet_id": "subnet-0f85c4f61f427724c"
              }
            ],
            "subnets": [
              "subnet-0d4126bfcae8f5246",
              "subnet-0f85c4f61f427724c"
            ],
            "tags": {
              "Name": "Wordpress ALB"
            },
            "tags_all": {
              "Name": "Wordpress ALB"
            },
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_security_group.alb-sg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:224134489861:listener/app/nginx-alb/0162d42eafa749d2/c06d8897e88f4a9f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:224134489861:targetgroup/nginx-tg/ed3a05e8fbfafb93",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:224134489861:listener/app/nginx-alb/0162d42eafa749d2/c06d8897e88f4a9f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:224134489861:loadbalancer/app/nginx-alb/0162d42eafa749d2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.nginx-alb",
            "module.alb.aws_lb_target_group.nginx-tg",
            "module.network.aws_security_group.alb-sg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tooling-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:224134489861:listener/app/tooling-alb/acf48b447675f2d0/fe9ba6e9d396e11a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:224134489861:targetgroup/tooling-tg/72ddb4b9fc02b382",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:224134489861:listener/app/tooling-alb/acf48b447675f2d0/fe9ba6e9d396e11a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:224134489861:loadbalancer/app/tooling-alb/acf48b447675f2d0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.tooling-alb",
            "module.alb.aws_lb_target_group.tooling-tg",
            "module.network.aws_security_group.alb-sg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "wordpress-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:224134489861:listener/app/wordpress-alb/798660383ff5bca8/fbc9509a6afde67b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:224134489861:targetgroup/wordpress-tg/9e4bd2e67866a77e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:224134489861:listener/app/wordpress-alb/798660383ff5bca8/fbc9509a6afde67b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:224134489861:loadbalancer/app/wordpress-alb/798660383ff5bca8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.wordpress-alb",
            "module.alb.aws_lb_target_group.wordpress-tg",
            "module.network.aws_security_group.alb-sg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "bastion-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:224134489861:targetgroup/bastion-tg/9eb2a9176a326635",
            "arn_suffix": "targetgroup/bastion-tg/9eb2a9176a326635",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:224134489861:targetgroup/bastion-tg/9eb2a9176a326635",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "bastion-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:224134489861:targetgroup/nginx-tg/ed3a05e8fbfafb93",
            "arn_suffix": "targetgroup/nginx-tg/ed3a05e8fbfafb93",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:224134489861:targetgroup/nginx-tg/ed3a05e8fbfafb93",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:224134489861:targetgroup/tooling-tg/72ddb4b9fc02b382",
            "arn_suffix": "targetgroup/tooling-tg/72ddb4b9fc02b382",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:224134489861:targetgroup/tooling-tg/72ddb4b9fc02b382",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tooling-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:224134489861:targetgroup/wordpress-tg/9e4bd2e67866a77e",
            "arn_suffix": "targetgroup/wordpress-tg/9e4bd2e67866a77e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:224134489861:targetgroup/wordpress-tg/9e4bd2e67866a77e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0af3577fe5e3532",
            "arn": "arn:aws:ec2:us-east-1:224134489861:instance/i-0f0019ad2ee5c9935",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f0019ad2ee5c9935",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "praise",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-097a9cf058a9a9d50",
            "private_dns": "ip-172-16-5-68.ec2.internal",
            "private_ip": "172.16.5.68",
            "public_dns": "ec2-44-192-85-68.compute-1.amazonaws.com",
            "public_ip": "44.192.85.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07db01ec7f40cb357",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f85c4f61f427724c",
            "tags": {
              "Name": "Bastion"
            },
            "tags_all": {
              "Name": "Bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0437d6ab2fea7640f"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.praise",
            "module.network.aws_security_group.bastion_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d881cec84c1339e5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-198-219-145.compute-1.amazonaws.com",
            "public_ip": "34.198.219.145",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Nat EIP"
            },
            "tags_all": {
              "Name": "Nat EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.ig",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224134489861:internet-gateway/igw-0c1bd531957f73b3b",
            "id": "igw-0c1bd531957f73b3b",
            "owner_id": "224134489861",
            "tags": {
              "Name": "IG"
            },
            "tags_all": {
              "Name": "IG"
            },
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d881cec84c1339e5",
            "connectivity_type": "public",
            "id": "nat-05b0090139497a4c2",
            "network_interface_id": "eni-0fbd00698e59abe6d",
            "private_ip": "172.16.8.169",
            "public_ip": "34.198.219.145",
            "subnet_id": "subnet-0f85c4f61f427724c",
            "tags": {
              "Name": "NAT"
            },
            "tags_all": {
              "Name": "NAT"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.ig",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c1bd531957f73b3b",
            "id": "r-rtb-056a06041e252d2e41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-056a06041e252d2e4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.ig",
            "module.network.aws_route_table.public-rtb",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "r2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-042c8bb113d56e3d01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05b0090139497a4c2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-042c8bb113d56e3d0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.ig",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private-rtb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224134489861:route-table/rtb-042c8bb113d56e3d0",
            "id": "rtb-042c8bb113d56e3d0",
            "owner_id": "224134489861",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private-rtb"
            },
            "tags_all": {
              "Name": "Private-rtb"
            },
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224134489861:route-table/rtb-056a06041e252d2e4",
            "id": "rtb-056a06041e252d2e4",
            "owner_id": "224134489861",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public-rtb"
            },
            "tags_all": {
              "Name": "Public-rtb"
            },
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6ff4a79fa9d83fb",
            "route_table_id": "rtb-042c8bb113d56e3d0",
            "subnet_id": "subnet-0e60abd0cacc08999"
          },
          "dependencies": [
            "module.network.aws_route_table.private-rtb",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f00b3ceaaa535a55",
            "route_table_id": "rtb-042c8bb113d56e3d0",
            "subnet_id": "subnet-01a313d2990b797ee"
          },
          "dependencies": [
            "module.network.aws_route_table.private-rtb",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0578fc71852aaeee5",
            "route_table_id": "rtb-042c8bb113d56e3d0",
            "subnet_id": "subnet-0a3f01f0bef466b1a"
          },
          "dependencies": [
            "module.network.aws_route_table.private-rtb",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a52818c8e2f62a5",
            "route_table_id": "rtb-042c8bb113d56e3d0",
            "subnet_id": "subnet-0cc82667ac76f282d"
          },
          "dependencies": [
            "module.network.aws_route_table.private-rtb",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c469c349fb4fc1c7",
            "route_table_id": "rtb-056a06041e252d2e4",
            "subnet_id": "subnet-0f85c4f61f427724c"
          },
          "dependencies": [
            "module.network.aws_route_table.public-rtb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022ca790983c5b96a",
            "route_table_id": "rtb-056a06041e252d2e4",
            "subnet_id": "subnet-0d4126bfcae8f5246"
          },
          "dependencies": [
            "module.network.aws_route_table.public-rtb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EFS-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224134489861:security-group/sg-02bfa2d5840048e01",
            "description": "Allow NFS Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bfa2d5840048e01",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "EFS-SG",
            "name_prefix": "",
            "owner_id": "224134489861",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs-SG"
            },
            "tags_all": {
              "Name": "efs-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224134489861:security-group/sg-034103cae3e10b6e1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-034103cae3e10b6e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "224134489861",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ALB-SG"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224134489861:security-group/sg-0437d6ab2fea7640f",
            "description": "Allow incoming SSH connections.",
            "egress": [],
            "id": "sg-0437d6ab2fea7640f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "224134489861",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Bastion-SG"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Bastion-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myapp_mysql_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224134489861:security-group/sg-00e3e9041477e5224",
            "description": "Allow access to MySQL RDS",
            "egress": [],
            "id": "sg-00e3e9041477e5224",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-043ffedd033e49253"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "secuirty_group_web_mysqlserver",
            "name_prefix": "",
            "owner_id": "224134489861",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds_secuirty_group"
            },
            "tags_all": {
              "Name": "rds_secuirty_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.alb-sg",
            "module.network.aws_security_group.nginx-sg",
            "module.network.aws_security_group.web_sg",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224134489861:security-group/sg-098d322be26937d72",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-098d322be26937d72",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-034103cae3e10b6e1"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-034103cae3e10b6e1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "224134489861",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "NGINX-SG"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "NGINX-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.alb-sg",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224134489861:security-group/sg-043ffedd033e49253",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-043ffedd033e49253",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098d322be26937d72"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098d322be26937d72"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "224134489861",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Webserver-SG"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Webserver-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.alb-sg",
            "module.network.aws_security_group.nginx-sg",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224134489861:subnet/subnet-0e60abd0cacc08999",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.32.0/20",
            "id": "subnet-0e60abd0cacc08999",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224134489861",
            "tags": {
              "Description": "Created by Terraform",
              "Name": "Private subnet tags"
            },
            "tags_all": {
              "Description": "Created by Terraform",
              "Name": "Private subnet tags"
            },
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224134489861:subnet/subnet-01a313d2990b797ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.48.0/20",
            "id": "subnet-01a313d2990b797ee",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224134489861",
            "tags": {
              "Description": "Created by Terraform",
              "Name": "Private subnet tags"
            },
            "tags_all": {
              "Description": "Created by Terraform",
              "Name": "Private subnet tags"
            },
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224134489861:subnet/subnet-0a3f01f0bef466b1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.64.0/20",
            "id": "subnet-0a3f01f0bef466b1a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224134489861",
            "tags": {
              "Description": "Created by Terraform",
              "Name": "Private subnet tags"
            },
            "tags_all": {
              "Description": "Created by Terraform",
              "Name": "Private subnet tags"
            },
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224134489861:subnet/subnet-0cc82667ac76f282d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.80.0/20",
            "id": "subnet-0cc82667ac76f282d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224134489861",
            "tags": {
              "Description": "Created by Terraform",
              "Name": "Private subnet tags"
            },
            "tags_all": {
              "Description": "Created by Terraform",
              "Name": "Private subnet tags"
            },
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224134489861:subnet/subnet-0f85c4f61f427724c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.0.0/20",
            "id": "subnet-0f85c4f61f427724c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "224134489861",
            "tags": {
              "Description": "Created by Terraform",
              "Name": "Public subnet"
            },
            "tags_all": {
              "Description": "Created by Terraform",
              "Name": "Public subnet"
            },
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224134489861:subnet/subnet-0d4126bfcae8f5246",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.16.0/20",
            "id": "subnet-0d4126bfcae8f5246",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "224134489861",
            "tags": {
              "Description": "Created by Terraform",
              "Name": "Public subnet"
            },
            "tags_all": {
              "Description": "Created by Terraform",
              "Name": "Public subnet"
            },
            "vpc_id": "vpc-0ee5fc91e6eaf6fe1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224134489861:vpc/vpc-0ee5fc91e6eaf6fe1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0afb05ce7baccc75f",
            "default_route_table_id": "rtb-0514db1719a4372b4",
            "default_security_group_id": "sg-06522efef8b195b0b",
            "dhcp_options_id": "dopt-0714797d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ee5fc91e6eaf6fe1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0514db1719a4372b4",
            "owner_id": "224134489861",
            "tags": {
              "Description": "Created by Terraform",
              "Name": "Terraform VPC"
            },
            "tags_all": {
              "Description": "Created by Terraform",
              "Name": "Terraform VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}